[project]
name = 'jpl.labcas.infosphere'
dynamic = ['version']
requires-python = '>=3.12'
dependencies = [
    'ldap3 ~= 2.9.0',
    'cryptography ~= 46.0.7',
    'pysolr ~= 3.10.0',
    'starlette ~= 0.49.1',
    'uvicorn ~= 0.34.0',
    'requests ~= 2.33.1',
]
authors = [
    {name = 'Sean Kelly', email='kelly@seankelly.biz'}
]
description = 'LabCAS Infosphere: the information API for the Laboratory Catalog and Archive Service'
readme = 'README.md'
keywords = ['data', 'catalog', 'archive', 'edrn', 'labcas', 'cancer', 'nih', 'nci', 'api', 'information', 'dicom', 'infosphere']
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
]
license = {file = 'LICENSE.md'}


[project.urls]
Homepage = 'https://github.com/EDRN/jpl.labcas.infosphere'
Issues = 'https://github.com/EDRN/jpl.labcas.infosphere/issues'


[project.scripts]
labcas-infosphere = 'jpl.labcas.infosphere.main:main'


[tool.hatch.version]
path = 'src/jpl/labcas/infosphere/VERSION.txt'
pattern = '(?P<version>.+)'


[tool.hatch.build.targets.wheel]
packages = ['src/jpl']

[tool.hatch.build.targets.wheel.force-include]
'src/jpl/labcas/infosphere/resources/postman_collection.json' = 'jpl/labcas/infosphere/resources/postman_collection.json'


[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
